[package]
name = "llama-dfdx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = { git = "https://github.com/starkat99/half-rs.git", branch = "main", features = ["num-traits", "rand_distr"] }
dfdx = { path = "../dfdx", default-features = false, features = ["std", "fast-alloc", "f16"] }
memmap2 = "0.5.10"
clap = { version = "4.2.5", features = ["derive"] }
rust_tokenizers = "8.1.0"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }

[features]
default = ["cpu"]
cpu = ["dfdx/cpu"]
cuda = ["dfdx/cuda"]
