[package]
name = "llama-dfdx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfdx = { git = "https://github.com/coreylowman/dfdx.git", branch = "main", default-features = false, features = ["std", "fast-alloc", "f16"] }
memmap2 = "0.5.10"
clap = { version = "4.2.5", features = ["derive"] }
rust_tokenizers = "8.1.0"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
json = "0.12.4"

[features]
default = ["cpu"]
cpu = ["dfdx/cpu"]
cuda = ["dfdx/cuda"]
